objects/LM_Products_Relax_Validation__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auth_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auth Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>